# sms-relayed

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  TRADEMARKS.md  build.rs  install.sh
.github/workflows/: build.yml
docs/operations/: long-running-validation.md
docs/plans/: 2026-07-11-001-perf-long-running-relay-hardening-plan.md  2026-07-12-001-fix-forwarding-dedup-latency-impl-tasks.md
docs/superpowers/plans/: 2026-07-08-p1-cli-installer.md  2026-07-08-p2-web-api-frontend.md  2026-07-09-modem-health-control.md
docs/superpowers/specs/: 2026-07-08-p1-cli-installer-design.md  2026-07-08-p2-api-frontend-design.md  2026-07-09-modem-health-design.md
frontend/: .cta.json  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: forwarding-status-panel.test.tsx  main.tsx  message-console.test.tsx  mobile-viewport.test.ts  routeTree.gen.ts  styles.css
frontend/src/components/config/: channel-editor.tsx  config-editor.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.ts  config-model.ts  events.ts  modem-api.ts  monitoring.test.ts  monitoring.ts
frontend/src/routes/: __root.tsx  config.tsx  forwarding.tsx  index.tsx  login.tsx  modem.tsx
scripts/: soak-sms-relayed.sh
src/: assets.rs  cli.rs  config.rs  dbus.rs  delivery.rs  events.rs  export.rs  main.rs  message.rs  messaging.rs  mode.rs  modem.rs  monitoring.rs  runner.rs  runtime.rs  setup.rs  smscode.rs  storage.rs  update.rs  util.rs  web.rs  wizard.rs
src/api/: auth.rs  config.rs  forwarding.rs  health.rs  messages.rs  mod.rs  modem.rs  service.rs
src/forward/: bark.rs  dingtalk.rs  mod.rs  pushplus.rs  shell.rs  telegram.rs  wecom.rs
src/persistence/: delivery.rs  mod.rs
src/storage/: attempts.rs  codecs.rs  deliveries.rs  messages.rs  metadata.rs  migrations.rs  mod.rs  retention.rs
tests/: install.sh
tests/fixtures/mmcli/: disabled.json  healthy.json  messaging-missing.json  modem-list.txt  sim-missing.json  text-registered.txt
(+15 files in other folders)
