[package]
name = "sms-relayed"
version = "1.0.7"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
axum = "0.8"
urlencoding = "2"
regex = "1"
gethostname = "0.5"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
