[package]
name = "sms-relayed"
version = "1.0.7"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
axum = "0.8"
urlencoding = "2"
regex = "1"
gethostname = "0.5"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
toml = "0.8"
inquire = "0.7"
is-terminal = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
http = "1"
headers = "0.4"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
csv = "1"
libc = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }
sentry = { version = "0.42", default-features = false, features = [
    "backtrace",
    "panic",
    "reqwest",
    "rustls",
] }

[dev-dependencies]
tower = "0.5"
